Icons and cats are added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HuBioDataLab</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
-    <link href="pictures/favicon.png" type="image/png" rel="shortcut icon"> <!-- Favicon -->
+    <link href="icons/favicon.png" type="image/png" rel="shortcut icon"> <!-- Favicon -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
         <nav class="navbar fixed-top navbar-dark bg-transparent navbar-expand-sm bg-company-black">
             <!-- bg-company-black css-->
             <div class="container-fluid">
-                <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="pictures/logo.png" alt="logo" title="Logo">
+                <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="icons/logo.png" alt="logo" title="Logo">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="navbar-nav mx-auto">
@@ -63,13 +63,13 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background3.gif">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/molecules.gif">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>DrugGEN</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background2.gif">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/red-crossbar.gif">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>CROssBAR</h1>
                     </div>
@@ -84,6 +84,18 @@
                     <img class="d-block w-100 img-fluid mx-auto" src="pictures/background5.webp">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>DEEPPred</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background5.webp">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>DeepResponse</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background5.webp">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>SELFormer</h1>
                     </div>
                 </div>
             </div>
@@ -105,7 +117,6 @@
     </div>
         
 
-
     <div id="button" class="d-flex justify-content-center position-relative">
         <a class="btn btn-primary mr-1 px-5 py-3 border-white" href="game.html" role="button">
             PLAY AQUARIUM
@@ -122,10 +133,10 @@
 
                 <div class="col-md-4 mb-md-0 mb-0">
                     <ul class="list-unstyled d-inline d-flex justify-content-center">
-                        <li><a href="https://www.facebook.com/"><img class="img-fluid" src="pictures/facebook.png" alt="facebook" title="Visit Facebook"></a></li>
-                        <li><a href="https://www.instagram.com/"><img class="img-fluid" src="pictures/instagram.png" alt="instagram" title="Visit Instagram"></a></li>
-                        <li><a href="https://twitter.com/"><img class="img-fluid" src="pictures/twitter.png" alt="twitter" title="Visit Twitter"></a></li>
-                        <li><a href="https://www.youtube.com/"><img class="img-fluid" src="pictures/youtube.png" alt="youtube" title="Visit Youtube"></a></li>
+                        <li><a href="https://www.facebook.com/"><img class="img-fluid" src="icons/facebook.png" alt="facebook" title="Visit Facebook"></a></li>
+                        <li><a href="https://www.instagram.com/"><img class="img-fluid" src="icons/instagram.png" alt="instagram" title="Visit Instagram"></a></li>
+                        <li><a href="https://twitter.com/"><img class="img-fluid" src="icons/twitter.png" alt="twitter" title="Visit Twitter"></a></li>
+                        <li><a href="https://www.youtube.com/"><img class="img-fluid" src="icons/youtube.png" alt="youtube" title="Visit Youtube"></a></li>
                     </ul>
                 </div>
 
@@ -135,7 +146,7 @@
 
 
         <!-- FOOTER COPYRIGHT-->
-        <div id="copyright" class="row  justify-content-center align-self-bottom d-flex pb-3 ">© 2018 Copyright: David Le's Company
+        <div id="copyright" class="row  justify-content-center align-self-bottom d-flex pb-3 ">© 2023 Copyright HUBioData Analysis Lab.
 
         </div>
     </footer>
