--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HuBioDataLab</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
-    <link href="icons/favicon.png" type="image/png" rel="shortcut icon"> <!-- Favicon -->
+    <link href="icons/favicon.png" type="image/png" rel="icon"> <!-- Favicon -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -81,19 +81,19 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background5.webp">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background3.gif">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>DEEPPred</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background5.webp">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/cell.gif">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>DeepResponse</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background5.webp">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/chars.gif">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>SELFormer</h1>
                     </div>
