Shrink fixed, social icons fixed.

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 
                 <div class="col-md-4 mb-md-0 mb-0">
                     <ul class="list-unstyled d-inline d-flex justify-content-center">
-                        <li><a href="https://www.facebook.com/"><img class="img-fluid" src="icons/facebook.png" alt="facebook" title="Visit Facebook"></a></li>
-                        <li><a href="https://www.instagram.com/"><img class="img-fluid" src="icons/instagram.png" alt="instagram" title="Visit Instagram"></a></li>
-                        <li><a href="https://twitter.com/"><img class="img-fluid" src="icons/twitter.png" alt="twitter" title="Visit Twitter"></a></li>
-                        <li><a href="https://www.youtube.com/"><img class="img-fluid" src="icons/youtube.png" alt="youtube" title="Visit Youtube"></a></li>
+                        <li><a href="https://github.com/HUBioDataLab"><img class="img-fluid" src="icons/github-logo.png" alt="github" title="Visit Github"></a></li>
+                        <li><a href="https://huggingface.co/HUBioDataLab"><img class="img-fluid" src="icons/huggingface-crop.png" alt="instagram" title="Visit Huggingface Space"></a></li>
+                        <li><a href="https://twitter.com/tuncadogan/"><img class="img-fluid" src="icons/twitter.png" alt="twitter" title="Visit Twitter"></a></li>
+                        
                     </ul>
                 </div>
 
