--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
                         <li class="nav-item  py-0 ml-4 active"><a class="nav-link" href="index.html">
                                 HOME
                             </a></li>
-                        <li class="nav-item  py-0 ml-4"><a class="nav-link text-white" href="services.html">
+                        <li class="nav-item  py-0 ml-4"><a class="nav-link text-white" href="projects.html">
                                 PROJECTS
                             </a></li>
-
                         <li class="nav-item  py-0 ml-4"><a class="nav-link text-white" href="aboutus.html">
                                 ABOUT US
                             </a></li>
                         <li class="nav-item   py-0 ml-4"><a class="nav-link text-white" href="ourteam.html">
                                 OUR TEAM
                             </a></li>
-                        <li class="nav-item   py-0 ml-4"><a class="nav-link text-white" href="technologies.html">
+                        <li class="nav-item   py-0 ml-4"><a class="nav-link text-white" href="publications.html">
                                 PUBLICATIONS
                             </a></li>
                     </ul>
@@ -139,7 +138,6 @@
                         
                     </ul>
                 </div>
-
             </div>
 
         </div>
