Root link added to logo. Some adjustments made.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <nav class="navbar fixed-top navbar-dark bg-transparent navbar-expand-sm bg-company-black">
             <!-- bg-company-black css-->
             <div class="container-fluid">
-                <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="icons/logo.png" alt="logo" title="Logo">
+                <a href="/">
+                    <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="icons/logo.png" alt="logo" title="Logo">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="navbar-nav mx-auto">
@@ -74,7 +76,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/background.gif">
+                    <img class="d-block w-100 img-fluid mx-auto" src="pictures/hexagon-purple.gif">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>DEEPScreen</h1>
                     </div>
