--- a/ourteam.html
+++ b/ourteam.html
@@ -21,7 +21,9 @@
         <nav class="navbar fixed-top navbar-dark bg-transparent navbar-expand-sm bg-company-black">
             <!-- bg-company-black css-->
             <div class="container-fluid">
-                <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="icons/logo.png" alt="logo" title="Logo">
+                <a href="/"></a>
+                    <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="icons/logo.png" alt="logo" title="Logo">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="navbar-nav mx-auto">
@@ -53,9 +55,11 @@
     <div class="pusher d-flex justify-content-center align-items-end">
         <a href="#arrow"><img class="" id="arrow" src="icons/down-arrow.png" alt="down" title="down"></a>
     </div>
+    
     <!----------------------OUR TEAM CONTENT------------------------------->
     <div class="container-fluid our-team">
         <!---------------------OUR TEAM BANNER------------------------>
+        <!---------------------FIRST ROW------------------------>
         <div class="row py-5 banner bannerOurTeam">
             <div class="d-flex col-md-3 col-sm-6 bg-transparent justify-content-center box">
                 <figure> <img class="cat-img" src="cats/cat.png" alt="Website Jedi" title="David Le">
@@ -78,6 +82,7 @@
                 </figure>
             </div>
         </div>
+        
         <!-------------OUR TEAM INFO------------------>
         <div id="infobanner" class="p-3">
             <div class="row border border-white rounded mb-3 team">
