Root link added to logo. Some adjustments made.

--- a/ourteam.html
+++ b/ourteam.html
@@ -21,7 +21,7 @@
         <nav class="navbar fixed-top navbar-dark bg-transparent navbar-expand-sm bg-company-black">
             <!-- bg-company-black css-->
             <div class="container-fluid">
-                <a href="/"></a>
+                <a href="/">
                     <img class="navbar-brand navbar-dark py-0 mt-3 ml-15" id="logo" src="icons/logo.png" alt="logo" title="Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="navbar-toggler-icon"></span></button>
