Proper our team banner kitties bootstrapping responsively.

--- a/ourteam.html
+++ b/ourteam.html
@@ -59,28 +59,82 @@
     <!----------------------OUR TEAM CONTENT------------------------------->
     <div class="container-fluid our-team">
         <!---------------------OUR TEAM BANNER------------------------>
+        
         <!---------------------FIRST ROW------------------------>
         <div class="row py-5 banner bannerOurTeam">
-            <div class="d-flex col-md-3 col-sm-6 bg-transparent justify-content-center box">
-                <figure> <img class="cat-img" src="cats/cat.png" alt="Website Jedi" title="David Le">
-                    <figcaption class="text-white position-absolute ml-4">WEBSITE JEDI</figcaption>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat.png" alt="Website Jedi" title="David Le">
+                    <figcaption class="text-white position-absolute ml-1">WEBSITE JEDI</figcaption>
                 </figure>
             </div>
-            <div class="d-flex col-md-3 col-sm-6 bg-transparent justify-content-center box">
-                <figure> <img class="cat-img" src="cats/cat1.png" alt="Serious Kitty" title="Meow2">
-                    <figcaption class="text-white position-absolute ml-4">SERIOUS KITTY</figcaption>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat1.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
                 </figure>
             </div>
-            <div class="d-flex col-md-3 col-sm-6 bg-transparent justify-content-center box">
-                <figure> <img class="cat-img" src="cats/cat2.png" alt="Graphic Grump" title="Meow3">
-                    <figcaption class="text-white position-absolute ml-2">GRAPHIC GRUMP</figcaption>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat2.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
                 </figure>
             </div>
-            <div class="d-flex col-md-3 col-sm-6 bg-transparent justify-content-center box">
-                <figure> <img class="cat-img" src="cats/cat3.png" alt="JAVA Master Yi" title="Meow4">
-                    <figcaption class="text-white position-absolute ml-3">JAVA MASTER YI</figcaption>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat3.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
                 </figure>
             </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat4.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat15.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat6.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat7.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat8.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat9.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat10.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-3 p-0 bg-transparent justify-content-center box">
+                <figure>
+                    <img class="cat-img" src="cats/cat12.png" alt="Serious Kitty" title="Meow2">
+                    <figcaption class="text-white position-absolute ml-1">SERIOUS KITTY</figcaption>
+                </figure>
+            </div>
+            <!-- Add more columns here with the same structure -->
         </div>
         
         <!-------------OUR TEAM INFO------------------>
