Proper team member rounded responsive container.

--- a/ourteam.html
+++ b/ourteam.html
@@ -140,28 +140,32 @@
         <!-------------OUR TEAM INFO------------------>
         <div id="infobanner" class="p-3">
             <div class="row border border-white rounded mb-3 team">
-                <div class="col-5">
-                    <h2 class="text-white">Tunca Doğan</h2><img class="profile-img" src="cats/cat7.png" alt="Tunca Doğan" title="Tunca Doğan">
+                
+                <div class="col-lg-3 col-md-4 col-sm-4 col-6">
+                    <h2 class="text-white">Tunca Doğan</h2>
+                    <img class="profile-img" src="cats/cat7.png" alt="Tunca Doğan" title="Tunca Doğan">
                 </div>
 
-                <div class="text-white offset-md-1 col-md-6">
+                <div class="profile-info text-white col-lg-3 col-md-4 col-sm-5 col-6">
+                    <ul>
+                        <li>
+                            E-mail: <br><a href="mailto:ledaodavid@gmail.com">ledaodavid<br>[at]gmail.com</a>
+                        </li>
+                        <li>
+                            Website: <br><a href="https://www.www.cs.hacettepe.edu.tr">www.cs.hacettepe.<br>edu.tr</a>
+                        </li>
+                        <li>
+                            Github: <br><a href="https://www.github.com">www.github.com</a>
+                        </li>
+                        <li>
+                            Linkedin: <br><a href="https://www.linkedin.com">www.linkedin.com</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="profile-info text-white col-lg-6 col-md-4 col-sm-0 col-0">
                     <p>
                         David is 19 years old coming from Czech Republic. He is currently an ICT Engineering student in Horsens, Denmark. The boss of this company.
                     </p>
-                    <ul>
-                        <li>
-                            E-mail: <a href="mailto:ledaodavid@gmail.com">ledaodavid@gmail.com</a>
-                        </li>
-                        <li>
-                            Website: <a href="https://www.www.cs.hacettepe.edu.tr">www.cs.hacettepe.edu.tr</a>
-                        </li>
-                        <li>
-                            Github: <a href="https://www.github.com">www.github.com</a>
-                        </li>
-                        <li>
-                            Linkedin: <a href="https://www.linkedin.com/">www.linkedin.com/</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         
