--- a/aboutus.html
+++ b/aboutus.html
@@ -34,10 +34,10 @@
                         <li class="nav-item  py-0 ml-4"><a class="nav-link text-white" href="projects.html">
                                 PROJECTS
                             </a></li>
-                        <li class="nav-item  py-0 ml-4 active"><a class="nav-link text-white" href="aboutus.html">
+                        <li class="nav-item  py-0 ml-4 active"><a class="nav-link" href="aboutus.html">
                                 ABOUT US
                             </a></li>
-                        <li class="nav-item   py-0 ml-4"><a class="nav-link" href="ourteam.html">
+                        <li class="nav-item   py-0 ml-4"><a class="nav-link text-white" href="ourteam.html">
                                 OUR TEAM
                             </a></li>
                         <li class="nav-item   py-0 ml-4"><a class="nav-link text-white" href="publications.html">
