About us boxes fixed.

--- a/aboutus.html
+++ b/aboutus.html
@@ -68,14 +68,16 @@
              </div>
             
             <!-------------ABOUT US INFO------------------>
-            <div id="infobanner" class="row d-flex justify-content-around p-3 text-center">
-                <div class="col-md-3 border border-white rounded">
-                    <h2 class="text-white">History</h2>
+            <div class="row d-flex justify-content-around p-3 text-center">
+                <div id="infobanner2" class="col-md-5 border border-white rounded">
+                    <h2 class="text-white">*History*</h2>
 
-                    <p class="text-white">Established in 1981, Bongo Cat is a NYSE listed global consulting and IT services company with more than 209,000 employees. From a capital of US$250, we have grown to become a US$11.12 billion (LTM Q1 FY19 revenues) company with a market capitalization of approximately US$ 42.4 billion.</p>
+                    <p class="text-white">Established in 1981, Bongo Cat is a NYSE listed global consulting and IT services company with more than 209,000 employees. 
+                        From a capital of US$250, we have grown to become a US$11.12 billion (LTM Q1 FY19 revenues) company with a market capitalization of approximately US$ 42.4 billion.</p>
                 </div>
-                <div class="col-md-3  border border-white rounded">
-                    <h2 class="text-white">Interests</h2>
+
+                <div id="infobanner2" class="col-md-5  border border-white rounded">
+                    <h2 class="text-white">Res. Interests</h2>
 
                     <p class="text-white">
                         Bioinformatics and Comp. Biology: Biomedical data anls., biomolecular seq. anls., protein func. pred., bio. DBs, bio. ontologies, and systems biology.
@@ -84,7 +86,18 @@
                     </p>
 
                 </div>
-                <div class="col-md-3  border border-white rounded">
+
+                <div id="infobanner2" class="col-md-5 border border-white rounded">
+                    <h2 class="text-white">Awards</h2>
+                    <p class="text-white">
+                        Izmir Biomedicine and Genome Center (IBG) - Science Medal 2022
+                        <br>TUSEB Aziz Sancar Science & Incentive Awards 2022 - Research Incentive Award
+                        <br>Bilim Akademisi (Science Academy) Young Scientist Awards Program (BAGEP) 2022
+                        <br>METU Parlar Foundation Honor, Science & Incentive Awards 2021 - Research Incentive Award
+                    </p>
+                </div>
+
+                <div id="infobanner2" class="col-md-5 border border-white rounded">
                     <h2 class="text-white">Awards</h2>
                     <p class="text-white">
                         Izmir Biomedicine and Genome Center (IBG) - Science Medal 2022
