About us rocket fixed.

--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,7 @@
     <div class="container-fluid services">
         
         <!---------------------ABOUT US BANNER------------------------>
-        <div class="row py-5 banner bannerAboutUs justify-content-center align-items-cente">
+        <div class="row py-5 banner bannerAboutUs justify-content-center align-items-center">
             <div class=" col justify-content-center d-flex">
                 <figure>
                     <img id="rocket" src="pictures/animat-rocket-color.gif" alt="rocket" title="Growing up">
