Colors and distortions are fixed around the site.

--- a/aboutus.html
+++ b/aboutus.html
@@ -80,9 +80,9 @@
                     <h2 class="text-white">Res. Interests</h2>
 
                     <p class="text-white">
-                        Bioinformatics and Comp. Biology: Biomedical data anls., biomolecular seq. anls., protein func. pred., bio. DBs, bio. ontologies, and systems biology.
-                        Cheminformatics: Comp. drug discovery, virtual screening, chemogenomics, drug-target inter. pred., small molecule anls.
-                        Data science: ML, DL, data/text mining, AI, data integration/representation/visualization, knowledge graphs, gen. modelling, representation learning, and graph theory.
+                        &rsaquo; Bioinformatics and Computational Biology: Biomedical data analysis, biomolecular sequence analysis, protein function prediction, biological databases, biological ontologies, and systems biology.
+                        <br>&rsaquo; Cheminformatics: Computational drug discovery, virtual screening, chemogenomics, drug-target interaction prediction, small molecule analysis.
+                        <br>&rsaquo; Data science: Machine learning, deep learning, data/text mining, artificial intelligence, data integration/representation/visualization, knowledge graphs, generative modelling, representation learning, and graph theory.
                     </p>
 
                 </div>
@@ -90,20 +90,22 @@
                 <div id="infobanner2" class="col-md-5 border border-white rounded">
                     <h2 class="text-white">Awards</h2>
                     <p class="text-white">
-                        Izmir Biomedicine and Genome Center (IBG) - Science Medal 2022
-                        <br>TUSEB Aziz Sancar Science & Incentive Awards 2022 - Research Incentive Award
-                        <br>Bilim Akademisi (Science Academy) Young Scientist Awards Program (BAGEP) 2022
-                        <br>METU Parlar Foundation Honor, Science & Incentive Awards 2021 - Research Incentive Award
+                        &rsaquo; Izmir Biomedicine and Genome Center (IBG) - Science Medal 2022
+                        <br>&rsaquo; TUSEB Aziz Sancar Science & Incentive Awards 2022 - Research Incentive Award
+                        <br>&rsaquo; Bilim Akademisi (Science Academy) Young Scientist Awards Program (BAGEP) 2022
+                        <br>&rsaquo; METU Parlar Foundation Honor, Science & Incentive Awards 2021 - Research Incentive Award
+                        <br>&rsaquo; TÜBİTAK 2247-A National Leader Researchers Program 2020 winner
+                        <br>&rsaquo; Hacettepe Science and Incentive Awards 2019 – Research Incentive Award
                     </p>
                 </div>
 
                 <div id="infobanner2" class="col-md-5 border border-white rounded">
                     <h2 class="text-white">Awards</h2>
                     <p class="text-white">
-                        Izmir Biomedicine and Genome Center (IBG) - Science Medal 2022
-                        <br>TUSEB Aziz Sancar Science & Incentive Awards 2022 - Research Incentive Award
-                        <br>Bilim Akademisi (Science Academy) Young Scientist Awards Program (BAGEP) 2022
-                        <br>METU Parlar Foundation Honor, Science & Incentive Awards 2021 - Research Incentive Award
+                        &rsaquo; Marie Sklodowska-Curie Actions Seal of Excellence winner (MSCA proposal 753397 – CROssBAR) in 2017
+                        <br>&rsaquo; TUBITAK, H2020 Programs, "Over the threshold" award in 2016 for scoring 91.2/100 in H2020-MSCA-IF-2016 proposal ESR with "CROssBAR" project.
+                        <br>&rsaquo; TUBITAK, H2020 Programs, "Over the threshold" award in 2015 for scoring 91.4/100 in H2020-MSCA-IF-2015 proposal ESR with "PaRTICLe" project.
+                        <br>&rsaquo; Swiss Institute of Bioinformatics (SIB) and UNIL, OMA Database Research Visit Fellowship in 2016.
                     </p>
                 </div>
 
