About us text fixes.

--- a/aboutus.html
+++ b/aboutus.html
@@ -77,7 +77,7 @@
                 </div>
 
                 <div id="infobanner2" class="col-md-5  border border-white rounded">
-                    <h2 class="text-white">Res. Interests</h2>
+                    <h2 class="text-white">Research Interests</h2>
 
                     <p class="text-white">
                         &rsaquo; Bioinformatics and Computational Biology: Biomedical data analysis, biomolecular sequence analysis, protein function prediction, biological databases, biological ontologies, and systems biology.
@@ -100,7 +100,7 @@
                 </div>
 
                 <div id="infobanner2" class="col-md-5 border border-white rounded">
-                    <h2 class="text-white">Awards</h2>
+                    <h2 class="text-white">Awards (cont.)</h2>
                     <p class="text-white">
                         &rsaquo; Marie Sklodowska-Curie Actions Seal of Excellence winner (MSCA proposal 753397 – CROssBAR) in 2017
                         <br>&rsaquo; TUBITAK, H2020 Programs, "Over the threshold" award in 2016 for scoring 91.2/100 in H2020-MSCA-IF-2016 proposal ESR with "CROssBAR" project.
