Burakcan surname is fixed 'İzmirli'.

--- a/ourteam.html
+++ b/ourteam.html
@@ -380,7 +380,7 @@
             <div class="row border border-white rounded mb-3 team">
                 
                 <div class="col-lg-3 col-md-4 col-sm-4 col-6">
-                    <h2 class="text-white">Burakcan </h2>
+                    <h2 class="text-white">Burakcan İzmirli</h2>
                     <img class="profile-img" src="cats/cat19.png" alt="Tunca Doğan" title="Tunca Doğan">
                 </div>
 
